# pwcca-auto

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: config.rs  display.rs  main.rs  media.rs
src/media/: policy.rs
src/media/policy_config/: com.rs
src/mods/: display.rs  mod.rs
src/mods/connection/: mod.rs
src/mods/connection/types/: error.rs  mod.rs  network.rs  wlan.rs
src/mods/display/: mod.rs
src/mods/media/: mod.rs  policy_config.rs  types.rs
src/mods/media/types/: device.rs  error.rs  mod.rs
src/mods/power/: mod.rs  types.rs
src/mods/process/: mod.rs
src/mods/program/: mod.rs
src/mods/startup/: mod.rs
src/mods/startup/registry/: mod.rs
src/mods/startup/registry/types/: mod.rs  regkey.rs  startup_status.rs
src/mods/startup/task_scheduler/: mod.rs
src/mods/taskbar/: mod.rs
src/mods/taskbar/types/: mod.rs
